<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity1.SecondFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="295dp"
        android:layout_height="86dp"
        android:layout_marginTop="132dp"
        app:helperText="@string/hint_email"
        app:helperTextTextColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="298dp"
        android:layout_height="83dp"
        android:layout_marginTop="36dp"
        app:helperText="@string/hint_name"
        app:helperTextTextColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameInputLayout3"
        android:layout_width="298dp"
        android:layout_height="82dp"
        android:layout_marginTop="36dp"
        app:helperText="@string/hint_surname"
        app:helperTextTextColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ageInputLayout4"
        android:layout_width="298dp"
        android:layout_height="82dp"
        android:layout_marginTop="36dp"
        app:errorEnabled="true"
        app:helperText="@string/hint_age"
        app:helperTextTextColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/interestCheckbox"
        android:layout_width="317dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:text="@string/checkbox_interest"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageInputLayout4"
        tools:text="@string/checkbox_interest" />

    <Button
        android:id="@+id/sendSurvey"
        android:layout_width="129dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:text="@string/survey_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestCheckbox"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="77dp"
        android:layout_height="53dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestCheckbox"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/header_survey"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/header_survey"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/header_survey" />

</androidx.constraintlayout.widget.ConstraintLayout>